<resources>
    <string name="app_name">情怀君</string>
    <string name="login_title">登录</string>
    <string name="login_email_title">邮箱地址/手机号码</string>
    <string name="login_password_title">密码</string>
    <string name="login_text_title">登录</string>
    <string name="login_forget_password_title">忘记密码?</string>
    <string name="login_register_title">新用户?注册</string>
    <string name="login_qq_title">QQ登录</string>
    <string name="login_wechat_title">微信登录</string>
    <string name="login_sina_title">新浪登录</string>
</resources>
