<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActLogin">

    <RelativeLayout
        android:id="@+id/rel_login_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#00d7fd">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxWidth="200dp"
            android:singleLine="true"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_login_title"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/linear_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon"
                android:layout_marginBottom="5dp"
                android:background="@drawable/login_edit_box_bg"
                android:gravity="center_vertical"
                android:minHeight="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/login_email_title"
                    android:src="@mipmap/email_icon" />

                <EditText
                    android:id="@+id/edit_account"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/login_email_title"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_email"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_edit_box_bg"
                android:minHeight="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/login_password_title"
                    android:src="@mipmap/password_icon" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center_vertical|start"
                    android:hint="@string/login_password_title"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_password"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:background="@drawable/login_button_bg"
                android:text="@string/login_text_title"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_forget_password_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginRight="5dp"
                        android:background="@mipmap/wechat_icon"
                        android:contentDescription="@string/login_qq_title" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginRight="5dp"
                        android:background="@mipmap/qq_icon"
                        android:contentDescription="@string/login_wechat_title" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@mipmap/sina_blog_icon"
                        android:contentDescription="@string/login_sina_title" />
                </LinearLayout>

                <View
                    android:id="@+id/login_interval_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_interval_line" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register_title" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
